--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tssChecker",
-  "version": "0.1.0",
+  "name": "tssSaver",
+  "version": "0.1.1",
   "description": "tssChecker GUI wrapper.",
   "main": "main.js",
   "scripts": {
